[2단계 - 자동차 경주] 리브(김민주) 미션 제출합니다  (#736)
* fix: 예외 메세지 오류 수정

* fix: 예외 메세지 오류 수정

* rerfactor: 예외 메세지의 숫자 상수 사용할 수 있도록 String.format 사용

* rerfactor: 테스트코드 DisplayName 매끄럽게 읽히도록 개선

* rerfactor: getCars, getTryCount 메서드 의미있는 이름으로 개선

* rerfactor: 메서드 순서 위에서 아래로 읽히도록 개선

* feat: tryCount 원시 값을 포장할 수 있는 객체 생성

* refactor: tryCount를 원시 값(int) 그대로 사용하지 않고 TryCount 객체에 질의하여 라운드들을 진행 할 수 있도록 개선

* rename: TryCount 객체로 필요한 유효성 검사를 옮기며 InputView에서 필요 없어진 테스트 제거

* refactor: TryCount 생성 시 0이나 음수가 들어온 케이스 각각 테스트 할 수 있도록 개선

* feat: 자동차 이름을 포장할 수 있는 CarName 객체 추가

* refactor: CarName class를 record로 변경

* fix: CarNameTest 자동차 이름 길이 검사 테스트에서 CarName을 생성하도록 수정

* refactor: 자동차 이름을 CarName 도메인을 통해 생성하고 Car에서도 CarName을 사용하도록 개선

* rename: RacingCarController의 이름을 더 의미 있는 이름으로 변경

* rename: tryCount가 0이 아닌지 확인하는 메서드의 이름을 더 적합한 이름으로 변경

* refactor: ConsoleReader를 주입 받아 controller를 생성하도록 변경

* refactor: TryCount에 요청하여 라운드를 요청된 시도 횟수만큼 반복하도록 개선

* refactor: 자동차 이름을 직접 받아서 Car를 생성하도록 개선

* refactor: 자동차 이름 리스트를 직접 받아서 Cars를 생성하도록 개선

* refactor: 자동차들을 이동시킬 숫자를 생성할 NumberGenerator를 주입 받을 수 있도록 개선

* fix: 지워진 맨 마지막 줄 추가

* refactor: position 원시 값을 포장하는 Position 객체를 사용하도록 개선

* refactor: 테스트 코드의 예외 메세지 안의 숫자들 상수를 이용하도록 변경

* refactor: 각 라운드의 결과를 모아 두었다가 한번에 OutputView에 전달하도록 개선

* test: Cars move메소드 테스트 코드 추가

* comment: 가독성을 위한 주석 추가

* rename: 혼동을 줄 수 있는 변수명 변경

* rename: CarName, Position의 값 이름 value로 변경
- 호출 시 name.name()이 아닌 name.value()로 호출하게 되어 가독성 향상

* test: TryCount의 execute 메소드 테스트 추가

* refactor: RoundResult DTO 생성하여 Cars의 result에서 RoundResult를 리턴하도록 개선
- 컨트롤러에서 List<RoundResult>로 관리하며 가독성 개선

* refactor: new Position(0)을 필드에 상수로 선언

* refactor: NumberGenerator의 이름 RefuelGenerator로 변경
- 인터페이스 구현체들도 네이밍 유사하게 변경
- Car의 move에서도 number가 아닌 fuel을 변수명으로 사용하도록 변경하여 통일성을줌